# python-pkg-template

./: README.md  setup.cfg  setup.py
package_name/: __init__.py  utils.py
tests/: test_example.py
