[metadata]
name = Package-Name
version = 0.1.0
author = Nathan Yockey
author_email = n8teyock@gmail.com
description = Package Desciption
long_description = file: README.md
long_description_content_type = text/markdown
url = 
license = MIT

[options]
packages = find:
python_requires = >=3.8
install_requires =
    requests>=2.31.0
    joblib==1.5.2
    numpy

[options.packages.find]
where = .
